--- a/Views/Home/Reports.cshtml
+++ b/Views/Home/Reports.cshtml
@@ -22,3 +22,8 @@
     @* Review Comments *@
     <a asp-controller="Reviews" asp-action="ReviewComments">Click to view Review Comments Report</a>
 </div>
+
+<div>
+    @* Review Comments *@
+    <a asp-controller="Reviewers" asp-action="Index">Click to view Reviewers Report</a>
+</div>
