--- a/Views/Papers/Index.cshtml
+++ b/Views/Papers/Index.cshtml
@@ -17,7 +17,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.AuthorID)
+                @Html.DisplayNameFor(model => model.PaperID)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Filename)
@@ -51,7 +51,7 @@
 
                 <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.AuthorID)
+                    @Html.DisplayFor(modelItem => item.PaperID)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.FilenameOriginal)
