--- a/Views/Defaults/Index.cshtml
+++ b/Views/Defaults/Index.cshtml
@@ -15,7 +15,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.EnabledAuthors)
             </th>
-            <th></th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
