--- a/Views/Reviewers/Index.cshtml
+++ b/Views/Reviewers/Index.cshtml
@@ -7,7 +7,11 @@
 <h1>Reviewer</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    @if(LoginManager.IsAdmin())
+    {
+        <a asp-action="Create">Create New</a>
+    }
+    
 </p>
 <table class="table">
     <thead>
@@ -16,10 +20,10 @@
                 @Html.DisplayNameFor(model => model.ReviewerID)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.FirstName)
+                @Html.DisplayNameFor(model => model.LastName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.LastName)
+                @Html.DisplayNameFor(model => model.FirstName)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Affiliation)
@@ -28,9 +32,24 @@
                 @Html.DisplayNameFor(model => model.Department)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Address)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.City)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.State)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ZipCode)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PhoneNumber)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.EmailAddress)
             </th>
-            <th></th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -58,10 +77,10 @@
                 @Html.DisplayFor(modelItem => item.ReviewerID)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
+                @Html.DisplayFor(modelItem => item.LastName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.LastName)
+                @Html.DisplayFor(modelItem => item.FirstName)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Affiliation)
@@ -70,12 +89,30 @@
                 @Html.DisplayFor(modelItem => item.Department)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.Address)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.City)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.State)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ZipCode)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PhoneNumber)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.EmailAddress)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ReviewerID">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.ReviewerID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ReviewerID">Delete</a>
+                    @if (LoginManager.IsAdmin())
+                    {
+                        <a asp-action="Delete" asp-route-id="@item.ReviewerID">Delete</a>
+                    }
             </td>
         </tr>
 }
