--- a/Views/Reviews/Index.cshtml
+++ b/Views/Reviews/Index.cshtml
@@ -26,7 +26,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Complete)
             </th>
-            <th></th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
