--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -75,21 +75,21 @@
                     @* Display message to logged in user if not morning *@
                     else if(LoginManager.IsLoggedIn == true)
                     {
-                         <li class="nav-item">
+                         <li class="nav-item"  style="border: none; margin-left: 5px; margin-right: 5px;">
                             <p class="nav-link text-dark">Hello, @LoginManager.Username!</p>
                          </li> 
-                         <li class="nav-item">
+                         <li class="nav-item"  style="border: none; margin-left: 5px; margin-right: 5px;">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
                          </li>
                     }
                     @* Display login and register options to a non-logged in user *@
                     else
                     {
-                        <li class="nav-item">
-                            <a asp-controller="Home" asp-action="Login" class="main-button" style="border: none;">Login</a>
+                        <li class="nav-item"  style="list-style-type: none;">
+                            <a asp-controller="Home" asp-action="Login" class="main-button" style="border: none; margin-left: 5px; margin-right: 5px;">Login</a>
                         </li>
-                        <li class="nav-item">
-                            <a asp-controller="Home" asp-action="Register" class="main-button" style="border: none;">Register</a>
+                        <li class="nav-item"  style="list-style-type: none;">
+                            <a asp-controller="Home" asp-action="Register" class="main-button" style="border: none; margin-left: 5px; margin-right: 5px;">Register</a>
                         </li>
                     }
 
