--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -71,6 +71,9 @@
                         <li class="nav-item">
                             <p>Good morning, @LoginManager.Username!</p>
                         </li>
+                        <li class="nav-item"  style="border: none; margin-left: 5px; margin-right: 5px;">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
+                         </li>
                     }
                     @* Display message to logged in user if not morning *@
                     else if(LoginManager.IsLoggedIn == true)
