--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -68,20 +68,20 @@
                     @* Display a special message to a logged in user if it's morning *@
                     @if (LoginManager.IsLoggedIn == true && DateTime.Now.Hour < 12)
                     {
-                        <li class="nav-item">
+                        <li class="nav-item" style="list-style-type: none;">
                             <p>Good morning, @LoginManager.Username!</p>
                         </li>
-                        <li class="nav-item"  style="border: none; margin-left: 5px; margin-right: 5px;">
+                        <li class="nav-item"  style=" list-style-type: none; border: none; margin-left: 5px; margin-right: 5px;">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
                          </li>
                     }
                     @* Display message to logged in user if not morning *@
                     else if(LoginManager.IsLoggedIn == true)
                     {
-                         <li class="nav-item"  style="border: none; margin-left: 5px; margin-right: 5px;">
+                         <li class="nav-item"  style="list-style-type: none; border: none; margin-left: 5px; margin-right: 5px;">
                             <p class="nav-link text-dark">Hello, @LoginManager.Username!</p>
                          </li> 
-                         <li class="nav-item"  style="border: none; margin-left: 5px; margin-right: 5px;">
+                         <li class="nav-item"  style="list-style-type: none; border: none; margin-left: 5px; margin-right: 5px;">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
                          </li>
                     }
